syntax = "proto3";

package pb;
option go_package = "internal/pb";

message Blank {}
message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CategoryCreateResquest{
    string name = 1;
    string description = 2;
}
message Categories{
    repeated Category categories = 1;
}

service CategoryService{
    rpc CreateCategory(CategoryCreateResquest) returns (Category){}
    rpc ListCategories(Blank) returns (Categories){}
}